objects/DataObj__c.object
<CustomObject>
    <fields>
        <fullName>ObjMail__c</fullName>
        <label>ObjMail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>exists__c</fullName>
        <defaultValue>false</defaultValue>
        <label>exists</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>field1__c</fullName>
        <label>field1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>DataObj</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>DataObj Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DataObjs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>